<resources>
    <string name="app_name">InClass07</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    title-->
    <string name="list">Contact List</string>
    <string name="upd">Update Contact</string>
    <string name="view">View Contact</string>
    <string name="add">Add Contact</string>

    <!-- Text View   -->
    <string name="Name">Name:</string>
    <string name="Number">Contact Number:</string>
    <string name="Type">Contact Type:</string>
    <string name="id">Contact ID:</string>
    <string name="email">Email:</string>
    <string name="dataId">ID:</string>

    <string name="Home">Home</string>
    <string name="Cell">Cell</string>
    <string name="Office">Office</string>

    <!--    Button -->
    <string name="Submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="Update">Update</string>
    <string name="deleteButton"> Delete </string>
    <string name="addButton"> Add New Contact </string>
    <string name="cancel"> Cancel </string>

    <!--    Error-->
    <string name="NumberError">Phone Number should be of 10 digit only!!!</string>
    <string name="NameError">Name can not be empty!!!</string>
    <string name="NumberFieldError">Phone Number can not be empty!!!</string>
    <string name="EmailrFieldError">Email can not be empty!!!</string>
    <string name="error"> Error: </string>
    <string name="common_error"> Something went wrong! </string>
    <string name="contact_error"> No contacts to display! </string>
    <string name="deleteMsg">Delete Successful</string>

    <string name="updateMsg">Update Successful</string>


    <string name="sure">Are you sure?</string>
    <string name="confirm">Confirmation</string>
    <string name="ok">Yes</string>
</resources>